# Spidey

./: .env.example  .gitattributes  .gitignore  .gitleaks.toml  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260709_29198a4a0c31_identity_audit_and_sessions_schema.py  20260710_0029007da215_code_index_snapshots_indexed_files_.py  20260710_f04939ccfed3_workspaces_repositories_and_file_.py  20260715_a1b2c3d4e5f6_code_chunks_is_suspect.py  20260716_b2c3d4e5f6a7_knowledge_graph.py  20260716_c3d4e5f6a7b8_event_plane.py  20260716_d4e5f6a7b8c9_llm_interactions.py  20260716_e5f6a7b8c9d0_agent_runs.py  20260717_f7a8b9c0d1e2_run_base_commit.py  20260720_9f8e7d6c5b4a_memories.py
backend/src/spidey/: __init__.py  composition.py
backend/src/spidey/agents/: __init__.py
backend/src/spidey/agents/application/: __init__.py  chat_runner.py  mcp_provider.py  memory_distiller.py  registry.py  report.py  run_service.py
backend/src/spidey/agents/domain/: __init__.py  mcp.py  ports.py  runs.py  tools.py
backend/src/spidey/agents/graph/: __init__.py  build.py  nodes.py  state.py
backend/src/spidey/agents/infrastructure/: __init__.py  code_edit.py  code_search.py  mcp_client.py  mcp_server.py  orm.py  run_store.py  sandbox_tools.py
backend/src/spidey/api/: __init__.py  deps.py  errors.py  main.py  middleware.py
backend/src/spidey/api/v1/: __init__.py  _request_meta.py  auth.py  health.py  memories.py  runs.py  schemas.py  sessions.py  users.py  workspaces.py
backend/src/spidey/codeintel/: __init__.py
backend/src/spidey/codeintel/application/: __init__.py  graph_builder.py  indexer.py  search.py
backend/src/spidey/codeintel/domain/: __init__.py  compression.py  errors.py  framing.py  languages.py  models.py  ports.py  reranking.py
backend/src/spidey/codeintel/infrastructure/: __init__.py  graph_store.py  orm.py  parser.py  qdrant_index.py  store.py
backend/src/spidey/evaluation/: __init__.py  __main__.py
backend/src/spidey/evaluation/application/: __init__.py  agent_task_suite.py  baselines.py  memory_safety_suite.py  registry.py  replay_suite.py  retrieval_ablation.py  retrieval_suite.py  runner.py
backend/src/spidey/evaluation/baselines/: retrieval.json
backend/src/spidey/evaluation/domain/: __init__.py  agent_tasks.py  models.py  replay.py  retrieval.py  safety.py
backend/src/spidey/evaluation/infrastructure/: __init__.py  reporting.py
backend/src/spidey/execution/: __init__.py
backend/src/spidey/execution/application/: __init__.py  terminal.py  tester.py
backend/src/spidey/execution/domain/: __init__.py  models.py  policy.py  ports.py  scrub.py
backend/src/spidey/execution/infrastructure/: __init__.py  docker_sandbox.py  k8s_client.py  k8s_sandbox.py
backend/src/spidey/identity/: __init__.py  __main__.py
backend/src/spidey/identity/application/: __init__.py  auth_service.py  user_service.py
backend/src/spidey/identity/domain/: __init__.py  models.py  ports.py
backend/src/spidey/identity/infrastructure/: __init__.py  argon2_hasher.py  jwt_tokens.py  orm.py  redis_guard.py  repositories.py  security_sink.py
backend/src/spidey/llm/: __init__.py
backend/src/spidey/llm/application/: __init__.py  gateway.py  registry.py
backend/src/spidey/llm/domain/: __init__.py  capabilities.py  chat.py  errors.py  models.py  ports.py  routing.py
backend/src/spidey/llm/infrastructure/: __init__.py  anthropic_adapter.py  budget.py  cache.py  capture.py  fastembed_embedder.py  gemini_adapter.py  openai_adapter.py  orm.py  reranker.py
backend/src/spidey/memory/: __init__.py
backend/src/spidey/platform/: __init__.py  audit.py  config.py  db.py  errors.py  logging.py  tasks.py  telemetry.py  vectors.py
backend/src/spidey/workers/: __init__.py  adapters.py  celery_app.py  container.py
backend/src/spidey/workspaces/: __init__.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_authz_matrix.py  test_codeintel_flows.py  test_event_plane.py  test_graph_flows.py  test_identity_flows.py  test_llm_conformance.py  test_retrieval_eval.py  test_sessions_flows.py  test_stack.py  test_workspaces_flows.py
backend/tests/security/: test_api_hardening.py  test_audit_and_lockout.py  test_encryption.py  test_memory_poisoning.py  test_safe_filesystem.py  test_sandbox_containment.py  test_url_guard.py
backend/tests/unit/agents/: test_chat_runner.py  test_code_edit.py  test_coder_workflow.py  test_graph.py  test_m10_flow.py  test_mcp_provider.py  test_mcp_server.py  test_memory_distiller.py  test_replay_eval.py  test_report.py  test_run_domain.py  test_run_service.py  test_sandbox_tools.py  test_tool_registry.py
backend/tests/unit/api/: test_health.py
backend/tests/unit/codeintel/: test_compression.py  test_framing.py  test_graph_builder.py  test_indexer.py  test_languages.py  test_parser.py  test_qdrant_index.py  test_reranking.py  test_search.py
backend/tests/unit/evaluation/: fakes.py  test_agent_tasks.py  test_baselines_and_reporting.py  test_cli.py  test_models.py  test_registry_and_runner.py  test_replay.py  test_retrieval.py  test_retrieval_ablation.py
backend/tests/unit/execution/: test_k8s_sandbox.py  test_policy.py  test_scrub.py  test_terminal.py  test_tester.py
backend/tests/unit/identity/: fakes.py  test_auth_service.py  test_domain.py  test_redis_guard.py
backend/tests/unit/llm/: test_adapters.py  test_gateway.py  test_reranker.py
backend/tests/unit/memory/: test_conversations.py  test_memory_domain.py  test_memory_service.py
backend/tests/unit/platform/: test_config.py  test_errors.py  test_events.py  test_injection.py  test_logging.py  test_scrubbing.py  test_secrets.py
backend/tests/unit/workers/: test_celery_app.py
backend/tests/unit/workspaces/: fakes.py  test_git_provider.py  test_git_workflow.py  test_ingestion_service.py  test_manifest.py  test_pr.py  test_workspace_service.py
(+216 files in other folders)
