[project]
name = "spidey"
version = "0.1.0"
description = "Production-grade autonomous coding agent platform"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "Kinan Alrefai", email = "kinanalrefai04@gmail.com" }]
dependencies = [
  # API
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
  # Contracts & config
  "pydantic>=2.10",
  "pydantic-settings>=2.7",
  # Persistence (schema managed by Alembic from M0; first models land in M1)
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30",
  "alembic>=1.14",
  # Background execution
  "celery[redis]>=5.4",
  "redis>=5.2",
  # Logging & telemetry
  "structlog>=24.4",
  "opentelemetry-sdk>=1.29",
  "opentelemetry-exporter-otlp-proto-http>=1.43.0",
  "opentelemetry-instrumentation-fastapi>=0.50b0",
  "opentelemetry-instrumentation-celery>=0.50b0",
  "prometheus-client>=0.21",
  # HTTP client (health probes now; provider adapters from M6)
  "httpx>=0.28",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.25",
  "pytest-cov>=6.0",
  "ruff>=0.9",
  "pyright[nodejs]>=1.1.392",
  "import-linter>=2.1",
  "bandit>=1.8",
  "pre-commit>=4.1",
  "celery-types>=0.22",
  "asgi-lifespan>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spidey"]

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E", "W", "F", "I", "N", "UP", "B", "A", "C4", "DTZ", "ISC", "PIE",
  "PT", "RET", "SIM", "ARG", "PTH", "PL", "RUF", "S", "TRY", "EM", "G", "T20",
]
ignore = [
  "TRY003", # long exception messages inline are fine with our error taxonomy
  "ISC001", # conflicts with the formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "S101",    # asserts are the point of tests
  "PLR2004", # magic values in assertions are readable
  "S105",    # fake credentials in fixtures
  "S106",
  "EM101",   # inline exception messages in fakes/fixtures are readable
]
"src/spidey/evaluation/__main__.py" = ["T201"] # CLI prints its report by design

[tool.ruff.lint.isort]
known-first-party = ["spidey"]

# ── Pyright ───────────────────────────────────────────────────────────────────
[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"
include = ["src", "tests"]
venvPath = "."
venv = ".venv"
# Third-party packages without stubs (celery internals, otel instrumentation)
# are wrapped in thin adapter modules; unknowns there are contained, not silenced
# globally beyond these two stub-availability switches.
reportMissingTypeStubs = false
reportUnknownMemberType = false

# ── Pytest / coverage ─────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
  "integration: requires reachable Postgres/Redis (skipped automatically otherwise)",
]
filterwarnings = ["error::DeprecationWarning:spidey.*"]

[tool.coverage.run]
source = ["spidey"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "@overload",
]

# ── Bandit ────────────────────────────────────────────────────────────────────
[tool.bandit]
exclude_dirs = ["tests", ".venv"]

# ── Import-linter: the architecture rules of docs/03, enforced ────────────────
[tool.importlinter]
root_package = "spidey"

[[tool.importlinter.contracts]]
name = "platform is the shared kernel — it imports no context or interface"
type = "forbidden"
source_modules = ["spidey.platform"]
forbidden_modules = ["spidey.api", "spidey.workers", "spidey.evaluation"]

[[tool.importlinter.contracts]]
name = "interface layers do not import each other"
type = "independence"
modules = ["spidey.api", "spidey.workers"]

[[tool.importlinter.contracts]]
name = "evaluation is layered: infrastructure -> application -> domain"
type = "layers"
layers = [
  "spidey.evaluation.infrastructure",
  "spidey.evaluation.application",
  "spidey.evaluation.domain",
]
