[project]
name = "spidey"
version = "0.1.0"
description = "Production-grade autonomous coding agent platform"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "Kinan Alrefai", email = "kinanalrefai04@gmail.com" }]
dependencies = [
  # API
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
  # Contracts & config
  "pydantic[email]>=2.10",
  "pydantic-settings>=2.7",
  # Persistence (schema managed by Alembic from M0; first models land in M1)
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30",
  "alembic>=1.14",
  # Background execution
  "celery[redis]>=5.4",
  "redis>=8.0.1",
  # Logging & telemetry
  "structlog>=24.4",
  "opentelemetry-sdk>=1.29",
  "opentelemetry-exporter-otlp-proto-http>=1.29",
  "opentelemetry-instrumentation-fastapi>=0.50b0",
  "opentelemetry-instrumentation-celery>=0.50b0",
  "prometheus-client>=0.21",
  # HTTP client (health probes now; provider adapters from M6)
  "httpx>=0.28",
  "argon2-cffi>=23.1",
  "pyjwt>=2.10",
  "cryptography>=44.0",
  "gitpython>=3.1.43",
  "pathspec>=0.12",
  "tree-sitter>=0.23",
  "tree-sitter-python>=0.23",
  "tree-sitter-javascript>=0.23",
  "tree-sitter-typescript>=0.23",
  "tree-sitter-go>=0.23",
  "tree-sitter-java>=0.23",
  "tree-sitter-rust>=0.23",
  "qdrant-client>=1.12",
  "fastembed>=0.5",
  "python-ulid>=3.0",
  "anthropic>=0.40",
  "openai>=1.60",
  "google-genai>=0.8",
  "jsonschema>=4.23",
  "mcp>=1.2",
  "langgraph>=0.2.60",
  "langgraph-checkpoint-postgres>=2.0",
  "psycopg[binary]>=3.3.4",
  # Execution sandbox (M9): Docker SDK behind the Sandbox port (ADR-0007)
  "docker>=7.1",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.25",
  "pytest-cov>=6.0",
  "ruff>=0.9",
  "pyright[nodejs]>=1.1.392",
  "import-linter>=2.1",
  "bandit>=1.8",
  "pre-commit>=4.1",
  "celery-types>=0.22",
  "asgi-lifespan>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spidey"]

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E", "W", "F", "I", "N", "UP", "B", "A", "C4", "DTZ", "ISC", "PIE",
  "PT", "RET", "SIM", "ARG", "PTH", "PL", "RUF", "S", "TRY", "EM", "G", "T20",
]
ignore = [
  "TRY003", # long exception messages inline are fine with our error taxonomy
  "EM101",  # ditto: our SpideyError subclasses take literal detail strings
  "EM102",  # ditto for f-string details
  "ISC001", # conflicts with the formatter
  "PLR0913", # services use keyword-only args by design; arg count is not a smell here
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "S101",    # asserts are the point of tests
  "PLR2004", # magic values in assertions are readable
  "S105",    # fake credentials in fixtures
  "S106",
  "EM101",   # inline exception messages in fakes/fixtures are readable
  "ARG002",  # fakes implement port signatures without using every argument
  "PLC0415", # fixtures import lazily to control settings-load ordering
  "S603",    # attack-shaped tests spawn helper processes (e.g. mklink)
  "S607",    # ...with partial paths (cmd/mklink) — controlled test input
  "S104",    # test parametrize lists include 0.0.0.0 as an SSRF target string
]
"src/spidey/evaluation/__main__.py" = ["T201"] # CLI prints its report by design
"src/spidey/identity/__main__.py" = ["T201"]    # bootstrap CLI prints its result
# Audit action names and a Lua script literal trip the "hardcoded password"
# heuristic on their variable names — not credentials.
"src/spidey/platform/audit.py" = ["S105"]
"src/spidey/identity/infrastructure/redis_guard.py" = ["S105"]

[tool.ruff.lint.isort]
known-first-party = ["spidey"]

# ── Pyright ───────────────────────────────────────────────────────────────────
[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"
include = ["src", "tests"]
venvPath = "."
venv = ".venv"
# Third-party packages without stubs (celery internals, otel instrumentation)
# are wrapped in thin adapter modules; unknowns there are contained, not silenced
# globally beyond these two stub-availability switches.
reportMissingTypeStubs = false
reportUnknownMemberType = false

# ── Pytest / coverage ─────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
  "integration: requires reachable Postgres/Redis (skipped automatically otherwise)",
  "sandbox: requires a reachable Docker daemon (skipped automatically otherwise)",
]
filterwarnings = ["error::DeprecationWarning:spidey.*"]

[tool.coverage.run]
source = ["spidey"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "@overload",
  '\.\.\.', # Protocol/ABC stub bodies have no executable logic
]

# ── Bandit ────────────────────────────────────────────────────────────────────
[tool.bandit]
exclude_dirs = ["tests", ".venv"]

# ── Import-linter: the architecture rules of docs/03, enforced ────────────────
[tool.importlinter]
root_package = "spidey"

[[tool.importlinter.contracts]]
name = "platform is the shared kernel — it imports no context or interface"
type = "forbidden"
source_modules = ["spidey.platform"]
forbidden_modules = [
  "spidey.api",
  "spidey.workers",
  "spidey.evaluation",
  "spidey.identity",
  "spidey.memory",
  "spidey.workspaces",
  "spidey.codeintel",
  "spidey.llm",
  "spidey.execution",
  "spidey.agents",
]

[[tool.importlinter.contracts]]
name = "interface layers do not import each other"
type = "independence"
modules = ["spidey.api", "spidey.workers"]

[[tool.importlinter.contracts]]
name = "bounded contexts do not import each other's internals"
type = "independence"
modules = [
  "spidey.identity",
  "spidey.memory",
  "spidey.evaluation",
  "spidey.workspaces",
  "spidey.codeintel",
  "spidey.llm",
  "spidey.execution",
]

[[tool.importlinter.contracts]]
name = "llm is layered: infrastructure -> application -> domain"
type = "layers"
layers = [
  "spidey.llm.infrastructure",
  "spidey.llm.application",
  "spidey.llm.domain",
]

[[tool.importlinter.contracts]]
name = "codeintel is layered: infrastructure -> application -> domain"
type = "layers"
layers = [
  "spidey.codeintel.infrastructure",
  "spidey.codeintel.application",
  "spidey.codeintel.domain",
]

[[tool.importlinter.contracts]]
name = "workspaces is layered: infrastructure -> application -> domain"
type = "layers"
layers = [
  "spidey.workspaces.infrastructure",
  "spidey.workspaces.application",
  "spidey.workspaces.domain",
]

[[tool.importlinter.contracts]]
name = "identity is layered: infrastructure -> application -> domain"
type = "layers"
layers = [
  "spidey.identity.infrastructure",
  "spidey.identity.application",
  "spidey.identity.domain",
]

[[tool.importlinter.contracts]]
name = "memory is layered: infrastructure -> application -> domain"
type = "layers"
layers = [
  "spidey.memory.infrastructure",
  "spidey.memory.application",
  "spidey.memory.domain",
]

[[tool.importlinter.contracts]]
name = "evaluation is layered: infrastructure -> application -> domain"
type = "layers"
layers = [
  "spidey.evaluation.infrastructure",
  "spidey.evaluation.application",
  "spidey.evaluation.domain",
]

[[tool.importlinter.contracts]]
name = "execution is layered: infrastructure -> application -> domain"
type = "layers"
layers = [
  "spidey.execution.infrastructure",
  "spidey.execution.application",
  "spidey.execution.domain",
]

# agents is the orchestrator: layered like the rest, but deliberately NOT in the
# bounded-context independence set — it composes the leaf contexts (they never
# depend on it).
[[tool.importlinter.contracts]]
name = "agents is layered: infrastructure -> graph -> application -> domain"
type = "layers"
layers = [
  "spidey.agents.infrastructure",
  "spidey.agents.graph",
  "spidey.agents.application",
  "spidey.agents.domain",
]
